# avito-lab-5

./: .gitignore  pyproject.toml  reflection.md
docs/specs/: weather-history-api.md
src/weather_history_api/: __init__.py  clients.py  main.py  models.py  service.py
tests/: test_api.py  test_client.py
