[project]
name = "practice5-diy-weather-api"
version = "0.1.0"
description = "DIY SDD submission for Practice 5: Weather History API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1,<4.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
